# clientgen

./: INSTALLATION_GUIDE.md  Makefile  PFRING_INTEGRATION.md  README.md  SUMMARY.md  WEB_INTERFACE.md  check_pfring.sh  clientgen_config.json  code_review_report.md  go.mod  go.sum  improvements_examples.md  pf_ring_integration_research.md  start_web.sh  webserver.go  Анотация.docx
clientgenlib/: clientData.go  counterProcessor.go  ioWkr.go
pfring_example/: CMakeLists.txt  Makefile  README.md  setup_submodule.sh
pfring_example/src/: packet_capture.c
protocol/: timestamp.go  timestamp_linux.go
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
